--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "EVA Studio Bridge",
-  "version": "1.1.0",
-  "description": "Ponte de comunicação entre a IDE EVA Studio e o Google AI Studio (Agente Programador).",
+  "name": "EVA Studio Bridge v2.0",
+  "version": "2.0.0",
+  "description": "Ponte entre a IDE EVA Studio (localhost) e o Google Gemini (gemini.google.com). Groq orquestra; Gemini atua como Programador.",
   "permissions": [
     "tabs",
     "scripting",
@@ -11,15 +11,15 @@
   "host_permissions": [
     "http://localhost:3000/*",
     "http://127.0.0.1:3000/*",
-    "https://aistudio.google.com/*"
+    "https://gemini.google.com/*"
   ],
   "background": {
     "service_worker": "background.js"
   },
   "content_scripts": [
     {
-      "matches": ["https://aistudio.google.com/*"],
-      "js": ["content-ai-studio.js"],
+      "matches": ["https://gemini.google.com/*"],
+      "js": ["content-gemini.js"],
       "run_at": "document_idle"
     },
     {
@@ -30,5 +30,9 @@
       "js": ["content-ide.js"],
       "run_at": "document_idle"
     }
-  ]
+  ],
+  "action": {
+    "default_popup": "popup.html",
+    "default_title": "EVA Bridge v2.0 – Status"
+  }
 }
