--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@monaco-editor/react": "^4.7.0",
     "@webcontainer/api": "^1.6.1",
     "lucide-react": "^0.460.0",
+    "mermaid": "^11.12.2",
     "next": "^14.2.18",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
