Plano para reestruturação

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,1 @@
-# Groq API Key (Agente Analista)
-# Obtenha em: https://console.groq.com
-#
-# IMPORTANTE: Next.js NÃO carrega este arquivo. Copie para .env.local:
-#   cp .env.example .env.local
-# Depois edite .env.local e coloque sua chave real (nunca commite .env.local).
-GROQ_API_KEY=sua_chave_aqui
+GROQ_API_KEY="Digite_sua_chave_aqui"
