--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-GROQ_API_KEY="Digite_sua_chave_aqui"
+# Chave da API Groq (obrigatória para o loop de automação).
+# Copie para .env.local e preencha o valor. Nunca commite .env.local.
+GROQ_API_KEY=
