--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "EVA Studio Bridge v2.0",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Ponte entre a IDE EVA Studio (localhost) e o Google Gemini (gemini.google.com). Groq orquestra; Gemini atua como Programador.",
   "permissions": [
     "tabs",
@@ -11,14 +11,15 @@
   "host_permissions": [
     "http://localhost:3000/*",
     "http://127.0.0.1:3000/*",
-    "https://gemini.google.com/*"
+    "https://gemini.google.com/*",
+    "https://www.gemini.google.com/*"
   ],
   "background": {
     "service_worker": "background.js"
   },
   "content_scripts": [
     {
-      "matches": ["https://gemini.google.com/*"],
+      "matches": ["https://gemini.google.com/*", "https://www.gemini.google.com/*"],
       "js": ["content-gemini.js"],
       "run_at": "document_idle"
     },
