--- a/package.json
+++ b/package.json
@@ -21,16 +21,17 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@types/json5": "^0.0.30",
     "@types/node": "^22.9.0",
-    "vitest": "^2.1.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.18",
-    "prettier": "^3.3.3",
     "postcss": "^8.4.49",
+    "prettier": "^3.3.3",
     "tailwindcss": "^3.4.15",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vitest": "^2.1.0"
   }
 }
