--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -12,13 +12,15 @@
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\""
   },
   "dependencies": {
+    "@google/genai": "^1.40.0",
     "@monaco-editor/react": "^4.7.0",
     "@webcontainer/api": "^1.6.1",
     "lucide-react": "^0.460.0",
     "mermaid": "^11.12.2",
     "next": "^14.2.18",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "xterm": "^5.3.0"
   },
   "devDependencies": {
     "@types/json5": "^0.0.30",
