--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,15 @@
 # EVA Studio – Variáveis de ambiente (exemplo)
-# Copie este arquivo para .env.local e preencha com suas chaves.
+# Copie este arquivo para .env.local e preencha conforme necessário.
 # O arquivo .env.local não é versionado (está no .gitignore).
 
-# Chave da API Groq (obrigatória para o Agente Analista)
-# Obtenha em: https://console.groq.com/keys
-GROQ_API_KEY=
+# Ollama (obrigatório para o Agente Analista local)
+# URL do Ollama (padrão: http://localhost:11434)
+# OLLAMA_URL=http://localhost:11434
+
+# Modelo padrão para chat (padrão: llama3.2)
+# Execute: ollama pull llama3.2
+# OLLAMA_MODEL=llama3.2
+
+# Modelo com visão para análise de imagens (padrão: llava)
+# Execute: ollama pull llava
+# OLLAMA_VISION_MODEL=llava
