--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
+    "@types/diff": "^7.0.2",
     "@webcontainer/api": "^1.6.1",
+    "diff": "^8.0.3",
     "lucide-react": "^0.460.0",
     "mermaid": "^11.12.2",
     "next": "^14.2.18",
